--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,6 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -43,15 +41,14 @@ android {
 
 dependencies {
     //Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
 
     //Design
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "com.google.android.material:material:1.3.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.1"
 
     //NavigationComponent
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
@@ -59,9 +56,9 @@ dependencies {
 
     //Lifecycle
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hiltVersion"
@@ -71,6 +68,7 @@ dependencies {
 
     //Coil
     implementation "io.coil-kt:coil:1.1.1"
+    implementation "io.coil-kt:coil-svg:1.1.1"
 
     //Squareup
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
