--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         navVersion = "2.3.4"
         hiltVersion = "2.31.2-alpha"
         hiltViewModelVersion = "1.0.0-alpha03"
-        roomVersion = "2.3.0-beta03"
+        roomVersion = "2.3.0-rc01"
     }
 
     repositories {
