--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,16 +48,13 @@ dependencies {
     //Design
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "com.google.android.material:material:1.3.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.1"
 
     //NavigationComponent
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
 
     //Lifecycle
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common:2.4.0-alpha01"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hiltVersion"
