--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
 
     ext {
         kotlinVersion = "1.4.31"
-        lifecycleVersion = "2.2.0"
         navVersion = "2.3.4"
         hiltVersion = "2.31.2-alpha"
         hiltViewModelVersion = "1.0.0-alpha03"
@@ -11,11 +10,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
@@ -25,7 +24,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
 
