--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     //Design
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "com.google.android.material:material:1.3.0"
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
 
     //NavigationComponent
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
@@ -57,10 +58,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common:2.4.0-alpha01"
 
     //Hilt
-    implementation "com.google.dagger:hilt-android:$hiltVersion"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltViewModelVersion"
-    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
-    kapt "androidx.hilt:hilt-compiler:$hiltViewModelVersion"
+    implementation "com.google.dagger:hilt-android:$daggerVersion"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$daggerVersion"
+    kapt "androidx.hilt:hilt-compiler:$hiltVersion"
 
     //Coil
     implementation "io.coil-kt:coil:1.1.1"
