--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     ext {
         kotlinVersion = "1.4.31"
         navVersion = "2.3.4"
-        hiltVersion = "2.31.2-alpha"
-        hiltViewModelVersion = "1.0.0-alpha03"
+        daggerVersion = "2.31.2-alpha"
+        hiltVersion = "1.0.0-alpha03"
         roomVersion = "2.3.0-rc01"
     }
 
@@ -16,7 +16,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$daggerVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
     }
 }
