--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,12 @@ dependencies {
     //Kotlin
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3-native-mt"
 
     //Design
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "com.google.android.material:material:1.3.0"
     implementation "com.facebook.shimmer:shimmer:0.5.0"
-    implementation "com.jjoe64:graphview:4.2.2"
 
     //NavigationComponent
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
@@ -70,9 +69,9 @@ dependencies {
 
     //Squareup
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
 
     //Room
