--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "com.google.android.material:material:1.3.0"
     implementation "com.facebook.shimmer:shimmer:0.5.0"
+    implementation "com.github.PhilJay:MPAndroidChart:v3.1.0"
 
     //NavigationComponent
     implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
