--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
 
     ext {
-        kotlinVersion = "1.4.31"
+        kotlinVersion = "1.4.32"
         navVersion = "2.3.4"
         daggerVersion = "2.31.2-alpha"
         hiltVersion = "1.0.0-alpha03"
@@ -14,7 +14,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha12"
+        classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$daggerVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
@@ -25,7 +25,12 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://jitpack.io'
+            content {
+                includeGroup('com.github.PhilJay')
+            }
+        }
     }
 }
 
